colorst fixed on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -59,6 +62,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  color: black;
 }
 
 .toggle-buttons {
@@ -71,8 +75,10 @@
   padding: 0.5rem 1rem;
   font-weight: 600;
   border-radius: 0.375rem;
-  background-color: #e2e8f0; /* szary nieaktywny */
-  color: #4a5568; /* ciemniejszy szary tekst */
+  background-color: #e2e8f0;
+  /* szary nieaktywny */
+  color: #4a5568;
+  /* ciemniejszy szary tekst */
   border: none;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
@@ -83,26 +89,27 @@
 }
 
 .toggle-btn.active {
-  background-color: #3b82f6; /* niebieski */
+  background-color: #3b82f6;
+  /* niebieski */
   color: white;
 }
 
 .center-panel {
   display: flex;
   flex-direction: column;
-  gap: 20px;  
+  gap: 20px;
 }
 
-.center-panel > *:first-child {
+.center-panel>*:first-child {
   margin-bottom: 6rem;
 }
 
 .right-panel {
   display: flex;
   flex-direction: column;
-  gap: 20px;  
+  gap: 20px;
 }
 
-.right-panel > *:first-child {
+.right-panel>*:first-child {
   margin-bottom: 6rem;
 }
